--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "eslint-config-airbnb-base": "^4.0.2",
     "eslint-plugin-import": "^1.11.0",
     "hint": "^2.0.0",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
@@ -218,7 +220,6 @@
     "path-type": "^4.0.0",
     "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
-    "postcss": "^8.4.21",
     "postcss-html": "^0.36.0",
     "postcss-media-query-parser": "^0.2.3",
     "postcss-resolve-nested-selector": "^0.1.1",
